# ome2024-ngff-challenge

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  index.html  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  pages.yml
about/: index.html
assets/: browser-B-ZyVB-j.js  gzip-CF-9a_hd.js  index-718b7GWF.js  index-B2Mz5nMN.js  index-B9TZXAfX.css  index-BEJD-Lq1.js  index-BN10ccra.js  index-BTYz6GCV.js  index-BXbUBE0n.css  index-Bmc_C3DB.js  index-C0ZbZslo.js  index-C1nKWVKK.css  index-C6YtS3Ix.js  index-CQ4y4ZYY.js  index-CRGCxDqM.css  index-CY1EKMdC.js  index-DFt3C9a_.js  index-DOilA5me.js  index-DQDF0PZl.css  index-DbEwSqLP.js  index-Dq3Dp_5L.js  index-DqIwqyw_.js  index-Dvv3olol.css  index-DwqPFl5A.js  index-DxcqBmpe.js  index-f5A03qwS.js  index-vFFav-wJ.css  png-K1gqQ34g-BuJsYxZu.js  zlib-CBiqHlio.js
dev1/: environment.yaml  environment_windows.yml  resave.py
dev1/convert_zarr_v2_to_v3/: convert_zarr_v2_to_v3.py  environmentv2_3.yml  util.py
dev2/: .pre-commit-config.yaml  environment.yaml  resave.py
dev3/2024-07-02/: ro-crate-metadata-proposal.md
dev3/2024-07-02/example-metadata/: min-specimen-biosample.json  minimal.json  rembi-modules.json
dev3/2024-07-02/example-metadata/zattr/: zattr.md  zattr_as_rocrate.json  zattr_as_rocrate_extended_linked_data.json  zattrs
dev3/zarr-crate/: README.md  pyproject.toml
dev3/zarr-crate/example_usage/: create_fly_ro_crate_metadata.py  read_ro_crate.py  ro-crate-metadata.json
dev3/zarr-crate/example_usage/example_ro_crate/: ro-crate-metadata.json
dev3/zarr-crate/zarr_crate/: rembi_extension.py  zarr_extension.py
docs/: conf.py  index.md
ome2024-ngff-challenge/: README.md  index.html  package-lock.json  package.json  vite.config.js
ome2024-ngff-challenge/src/: About.svelte  App.svelte  CanvasGallery.svelte  ColumnSort.svelte  Header.svelte  ImageList.svelte  Main.svelte  Nav.svelte  Pixel.svelte  PreviewPopup.svelte  SourcePanel.svelte  ThumbGallery.svelte  ThumbLoader.svelte  Thumbnail.svelte  ZarrListItem.svelte  app.css  ontologyStore.js  tableStore.js  util.js
samples/: crick.csv  ebi-ngff-challenge-samples.csv  flamingo.csv  fzj.csv  idr0004_samples.csv  idr0010_samples.csv  idr0011_samples.csv  idr0012_samples.csv  idr0013_samples.csv  idr0015_samples.csv  idr0016_samples.csv  idr0025_samples.csv  idr0026_samples.csv  idr0033_samples.csv  idr0035_samples.csv  idr0036_samples.csv  idr0044_samples.csv  idr0051_samples.csv  idr0054_samples.csv  idr0066_samples.csv  idr0090_samples.csv  idr0157_samples.csv  idr_samples.csv  jax_samples.csv  lin_samples.csv  load_zarr_stats.py  n4bi.csv  ngff_samples.csv  other_samples.csv  ssbd_samples.csv  uni_muenster_samples.csv  webknossos_samples.csv
src/ome2024_ngff_challenge/: __init__.py  lookup.py  resave.py  utils.py
src/ome2024_ngff_challenge/zarr_crate/: rembi_extension.py  zarr_extension.py
stats/: parse.py
tests/: test_package.py  test_resave.py
tests/data/: 2d.fake.ini  bf2raw.fake.ini  hcs.fake.ini
tests/data/2d.zarr/: .zattrs
tests/data/2d.zarr/0/0/2/0/0/: 0
tests/data/bf2raw.zarr/0/: .zattrs
tests/data/bf2raw.zarr/0/0/: .zarray
tests/data/bf2raw.zarr/0/0/0/0/0/0/: 0
tests/data/bf2raw.zarr/1/: .zattrs
tests/data/bf2raw.zarr/1/0/0/0/0/0/: 0
tests/data/bf2raw.zarr/OME/: METADATA.ome.xml
tests/data/hcs.zarr/: .zattrs
tests/data/hcs.zarr/A/1/0/: .zattrs
tests/data/hcs.zarr/A/1/0/0/0/1/0/0/: 0
tests/data/hcs.zarr/A/1/1/: .zattrs
tests/data/hcs.zarr/A/1/1/0/0/0/0/0/: 0
tests/data/hcs.zarr/A/1/1/0/0/1/0/0/: 0
tests/data/hcs.zarr/A/1/1/0/0/2/0/0/: 0
tests/data/hcs.zarr/A/2/0/: .zattrs
tests/data/hcs.zarr/A/2/0/0/0/0/0/0/: 0
tests/data/hcs.zarr/A/2/0/0/0/1/0/0/: 0
tests/data/hcs.zarr/A/2/0/0/0/2/0/0/: 0
tests/data/hcs.zarr/A/2/1/: .zattrs
tests/data/hcs.zarr/A/2/1/0/0/0/0/0/: 0
tests/data/hcs.zarr/A/2/1/0/0/1/0/0/: 0
tests/data/hcs.zarr/A/2/1/0/0/2/0/0/: 0
tests/data/hcs.zarr/B/1/0/: .zattrs
tests/data/hcs.zarr/B/1/0/0/0/0/0/0/: 0
tests/data/hcs.zarr/B/1/0/0/0/1/0/0/: 0
tests/data/hcs.zarr/B/1/0/0/0/2/0/0/: 0
tests/data/hcs.zarr/B/1/1/: .zattrs
tests/data/hcs.zarr/B/1/1/0/0/0/0/0/: 0
tests/data/hcs.zarr/B/1/1/0/0/1/0/0/: 0
tests/data/hcs.zarr/B/2/: .zattrs
tests/data/hcs.zarr/B/2/0/: .zattrs
tests/data/hcs.zarr/B/2/1/: .zattrs
tests/data/hcs.zarr/B/2/1/0/: .zarray
tests/data/hcs.zarr/OME/: .zattrs  METADATA.ome.xml
(+7 files in other folders)
